--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Html, Css, jQuery, JavaScript, Anwar, onepage, personal, Portfolio, design, creative, template">
 
     <!-- Title -->
-    <title>Anwar - One Page Creative Portfolio Template</title>
+    <title>Bruno Cazabat - Portfolio</title>
     <!-- Favicon -->
     <link rel="icon" href="https://via.placeholder.com/80x80">
     <!-- Google Fonts -->
@@ -29,12 +29,6 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <!-- Main Style Css -->
     <link rel="stylesheet" href="css/main.css">
-
-    <!--[if lt IE 9]>
-        <script src="js/html5shiv.min.js"></script>
-        <script src="js/respond.min.js"></script>
-        <![endif]-->
-
 </head>
 
 <body>
@@ -64,7 +58,7 @@
                     <span class="bar"></span>
                 </button>
                 <!-- logo -->
-                <a class="navbar-brand" href="#"><span>A</span>nwar</a>
+                <a class="navbar-brand" href="#"><span>B</span>runo <span>C</span>azabat</a>
             </div>
             <!-- Collect the nav links, and other content for toggling -->
             <div class="navbar-links" id="ournavbar">
@@ -93,8 +87,8 @@
                 <div class="intro display-table">
                     <div class="display-table-cell">
                         <h3>Hey, My name is</h3>
-                        <h1>Jhon Smith</h1>
-                        <p>A Freelance Web <span></span></p>
+                        <h1>Bruno Cazabat</h1>
+                        <p>A Software <span></span></p>
                         <div class="my-btn">
                             <a href="#" class="main-btn">Hire Me</a>
                         </div>
@@ -125,20 +119,19 @@
                             <h2>About Me</h2>
                             <span>01.</span>
                         </div>
-                        <h3>Hello! I am John Smith</h3>
-                        <p>I'm a Freelance Web Designer &amp; Developer based in New York, USA, and I'm very passionate and dedicated to my work .With 7 years experience as a professional Web Designer &amp; Developer, I have acquired the skills necessary
-                            to build great and premium websites.</p>
+                        <h3>Hello! I am Bruno Cazabat</h3>
+                        <p>I'm a Software Developer &amp; Developer based in Stuttgart, Germany, and I'm very passionate and dedicated to my work .With 7 years experience as a professional Web Designer &amp; Developer, I have acquired the skills necessary
+                            to build great and premium softwares.
+                        </p>
                         <div class="personal-info">
-                            <p><span><i class="fa fa-user"></i></span>Jhon Smith</p>
-                            <p><span><i class="fa fa-phone"></i></span>+1 212 422-1417</p>
-                            <p><span><i class="fa fa-envelope"></i></span>Jhonsmith@infos.com</p>
-                            <p><span><i class="fa fa-map-marker"></i></span>New York, USA</p>
+                            <p><span><i class="fa fa-user"></i></span>Bruno Cazabat</p>
+                            <p><span><i class="fa fa-phone"></i></span>+33 6 31 54 41 74</p>
+                            <p><span><i class="fa fa-envelope"></i></span>bruno.cazabat@epitech.eu</p>
+                            <p><span><i class="fa fa-map-marker"></i></span>Stuttgart, Germany</p>
                             <div class="social-media">
                                 <span>
                                     <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-behance"></i></a>
-                                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                                    <a href="#"><svg class="fa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg></a>
                                     <a href="#"><i class="fa fa-linkedin"></i></a>
                                 </span>
                             </div>
@@ -755,33 +748,7 @@
                     </div>
                 </div>
                 <div class="col-sm-8">
-                    <form class="contact-form" action="mail.php" method="post">
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="name" name="name" required value="" onkeyup="this.setAttribute('value', this.value);">
-                            <label for="name">Name</label>
-                            <span class="input-border"></span>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control" id="email" name="email" required value="" onkeyup="this.setAttribute('value', this.value);">
-                            <label for="email">Email</label>
-                            <span class="input-border"></span>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="subject" name="subject" required value="" onkeyup="this.setAttribute('value', this.value);">
-                            <label for="subject">Subject</label>
-                            <span class="input-border"></span>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" id="message" name="message" required data-value="" onkeyup="this.setAttribute('data-value', this.value);"></textarea>
-                            <label for="message">Your Message</label>
-                            <span class="input-border"></span>
-                        </div>
-                        <!-- Button Send Message  -->
-                        <button class="contact-btn main-btn btn btn-block" type="submit" name="send">Send
-                            Message</button>
-                        <!-- Form Message  -->
-                        <div class="form-message text-center"><span></span></div>
-                    </form>
+                    <div data-paperform-id="a1pqnern"></div>
                 </div>
             </div>
         </div>
@@ -793,7 +760,7 @@
 
     <footer class="footer text-center">
         <div class="container">
-            <a class="logo" href="#"><span>A</span>nwar</a>
+            <a class="logo" href="#"><span>B</span>runo <span>C</span>azabat</a>
             <ul class="footer-social-icons list-unstyled">
                 <li>
                     <a href="#">
@@ -802,17 +769,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-behance"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-dribbble"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
                     </a>
                 </li>
                 <li>
@@ -822,7 +779,7 @@
                 </li>
             </ul>
             <div class="copyright">
-                <p>All Right Reserved &copy; 2019 <a href="#" target="_blank">HasnaaDesign</a></p>
+                <p>All Right Reserved &copy; 2022 <a href="#" target="_blank">Bruno Cazabat - Portfolio</a></p>
             </div>
         </div>
     </footer>
