Adding scripts for contact form

--- a/index.html
+++ b/index.html
@@ -814,6 +814,14 @@
     <script src="js/wow.min.js"></script>
     <!-- Custom Js -->
     <script src="js/custom.js"></script>
+    <!-- Contact Script -->
+    <script>
+        (function() {
+            var script = document.createElement('script');
+            script.src = "https://paperform.co/__embed.min.js";
+            document.body.appendChild(script);
+        })()
+    </script>
 </body>
 
 </html>
