Adding redirect to my socials

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                             <p><span><i class="fa fa-map-marker"></i></span>Stuttgart, Germany</p>
                             <div class="social-media">
                                 <span>
-                                    <a href="#"><i class="fa fa-github"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/brunocazabat"><i class="fa fa-github"></i></a>
+                                    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/b-czt/"><i class="fa fa-linkedin"></i></a>
                                 </span>
                             </div>
                         </div>
-                        <a href="#" class="main-btn">Download my CV</a>
+                        <a target="_blank" rel="noopener noreferrer" href="files/CV_Bruno_Cazabat_EN.pdf" class="main-btn">Download my CV</a>
                     </div>
                 </div>
             </div>
@@ -736,12 +736,12 @@
             <a class="logo" href="#"><span>B</span>runo <span>C</span>azabat</a>
             <ul class="footer-social-icons list-unstyled">
                 <li>
-                    <a href="#">
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/brunocazabat">
                         <i class="fa fa-github"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/b-czt/">
                         <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
