Updating informations about me

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <span>01.</span>
                         </div>
                         <h3>Hello! I am Bruno Cazabat</h3>
-                        <p>I'm a Software Developer &amp; Developer based in Stuttgart, Germany, and I'm very passionate and dedicated to my work .With 7 years experience as a professional Web Designer &amp; Developer, I have acquired the skills necessary
+                        <p>I'm a Software Developer &amp; Developer based in Stuttgart, Germany, and I'm very passionate and dedicated to my work. With 7 years experience as a professional Web Designer &amp; Developer, I have acquired the skills necessary
                             to build great and premium softwares.
                         </p>
                         <div class="personal-info">
@@ -471,81 +471,6 @@
     </section>
     <!-- ========== End Fun Facts ========== -->
 
-    <!-- ========== Start Testimonials ========== -->
-    <section id="testimonials" class="testimonials">
-        <div class="container">
-            <div class="main-title">
-                <h2>Testimonials</h2>
-                <span>06.</span>
-            </div>
-            <div class="row">
-                <div class="col-md-12 owl-carousel owl-theme">
-                    <!-- New Item -->
-                    <div class="testimonial-box">
-                        <div class="description">
-                            <span class="quote-left"><i class="fa fa-quote-left"></i></span>
-                            <span class="quote-right"><i class="fa fa-quote-right"></i></span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                        </div>
-                        <div class="client-pic">
-                            <img src="https://via.placeholder.com/100x100" alt="client">
-                        </div>
-                        <div class="client-details">
-                            <h6> Joe Paulian </h6>
-                            <span>Web Developer</span>
-                        </div>
-                    </div>
-                    <!-- New Item -->
-                    <div class="testimonial-box">
-                        <div class="description">
-                            <span class="quote-left"><i class="fa fa-quote-left"></i></span>
-                            <span class="quote-right"><i class="fa fa-quote-right"></i></span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                        </div>
-                        <div class="client-pic">
-                            <img src="https://via.placeholder.com/100x100" alt="client">
-                        </div>
-                        <div class="client-details">
-                            <h6> Silvia Hatmun </h6>
-                            <span>SEO Manager</span>
-                        </div>
-                    </div>
-                    <!-- New Item -->
-                    <div class="testimonial-box">
-                        <div class="description">
-                            <span class="quote-left"><i class="fa fa-quote-left"></i></span>
-                            <span class="quote-right"><i class="fa fa-quote-right"></i></span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                        </div>
-                        <div class="client-pic">
-                            <img src="https://via.placeholder.com/100x100" alt="client">
-                        </div>
-                        <div class="client-details">
-                            <h6> Alexander Smith </h6>
-                            <span>Graphic Designer</span>
-                        </div>
-                    </div>
-                    <!-- New Item -->
-                    <div class="testimonial-box">
-                        <div class="description">
-                            <span class="quote-left"><i class="fa fa-quote-left"></i></span>
-                            <span class="quote-right"><i class="fa fa-quote-right"></i></span>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-                        </div>
-                        <div class="client-pic">
-                            <img src="https://via.placeholder.com/100x100" alt="client">
-                        </div>
-                        <div class="client-details">
-                            <h6> Cristina Jordan </h6>
-                            <span>Web Developer</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ========== End Testimonials ========== -->
-
     <!-- ========== Start Blog ========== -->
     <section class="blog" id="blog">
         <div class="container">
@@ -671,7 +596,7 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="main-title">
-                <h2>Contact Me</h2>
+                <h2>Contact Me !</h2>
                 <span>08.</span>
             </div>
             <div class="row">
@@ -684,8 +609,8 @@
                                 </h4>
                             </div>
                             <div class="content-box">
-                                <p>NewYork, USA</p>
-                                <p>10 Street Name</p>
+                                <p>Stuttgart, Germany</p>
+                                <p>16 Kornwestheimer Str</p>
                             </div>
                         </div>
                         <div class="contact-box">
@@ -695,8 +620,8 @@
                                 </h4>
                             </div>
                             <div class="content-box">
-                                <p>Jhonsmith@infos.com</p>
-                                <p>Support@example.com</p>
+                                <p>bruno.cazabat@epitech.eu</p>
+                                <p>12cabr1mst@hft-stuttgart.de</p>
                             </div>
                         </div>
                         <div class="contact-box">
@@ -706,18 +631,7 @@
                                 </h4>
                             </div>
                             <div class="content-box">
-                                <p>+1 212 422-1417</p>
-                                <p>+1 212 114-2510</p>
-                            </div>
-                        </div>
-                        <div class="contact-box">
-                            <div class="title-box">
-                                <h4>Website
-                                    <span class="icon-box"><i class="fa fa-globe"></i></span>
-                                </h4>
-                            </div>
-                            <div class="content-box">
-                                <p>www.yourdomain.com</p>
+                                <p>+33 6 31 54 41 74</p>
                             </div>
                         </div>
                     </div>
