--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Anwar - One Page Creative Portfolio Template">
-    <meta name="keywords" content="Html, Css, jQuery, JavaScript, Anwar, onepage, personal, Portfolio, design, creative, template">
+    <meta name="description" content="Online Portfolio of Bruno Cazabat">
+    <meta name="keywords" content="Html, Css, jQuery, JavaScript, onepage, personal, Portfolio, design, creative">
 
     <!-- Title -->
     <title>Bruno Cazabat - Portfolio</title>
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-5 col-md-6">
                     <div class="about-image">
-                        <img class="img-responsive" src="https://via.placeholder.com/500x600" alt="">
+                        <img class="img-responsive" src="images/profile.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6">
@@ -420,25 +420,25 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="fact-item wow fadeInLeft" data-wow-duration="1.7s">
                         <h4><span class="fact-icon"><i class="fa fa-code"></i></span>projects Done</h4>
-                        <span class="fact-number" data-from="0" data-to="554" data-speed="2500"></span>
+                        <span class="fact-number" data-from="0" data-to="50" data-speed="2500"></span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="fact-item wow fadeInLeft" data-wow-duration="1.7s">
-                        <h4><span class="fact-icon"><i class="fa fa-users"></i></span>Happy Clients</h4>
-                        <span class="fact-number" data-from="0" data-to="540" data-speed="2500"></span>
+                        <h4><span class="fact-icon"><i class="fa fa-mobile-phone"></i></span>Mobile Apps Done</h4>
+                        <span class="fact-number" data-from="0" data-to="4" data-speed="2500"></span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="fact-item wow fadeInLeft" data-wow-duration="1.7s">
                         <h4><span class="fact-icon"><i class="fa fa-clock-o"></i></span>Hours Of Work</h4>
-                        <span class="fact-number" data-from="0" data-to="1200" data-speed="2500"></span>
+                        <span class="fact-number" data-from="0" data-to="43800" data-speed="2500"></span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="fact-item wow fadeInLeft" data-wow-duration="1.7s">
-                        <h4><span class="fact-icon"><i class="fa fa-coffee"></i></span>Coffee Cups</h4>
-                        <span class="fact-number" data-from="0" data-to="160" data-speed="2500"></span>
+                        <h4><span class="fact-icon"><i class="fa fa-star"></i></span>Websites Done</h4>
+                        <span class="fact-number" data-from="0" data-to="35" data-speed="2500"></span>
                     </div>
                 </div>
             </div>
