--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
                             <span>01.</span>
                         </div>
                         <h3>Hello ! I am Bruno Cazabat</h3>
-                        <p>I am an enthusiastic, responsible and hardworking junior software developer with an experience of 3 years in web and mobile development. Currently, I am pursuing a master of Science in software technology. Being part of different
-                            projects helped me adapt to change quickly and made me a mature team worker, furthermore, I learned how to deal with strict deadlines and work well under pressure. Given my strong technical background, I intend to engage in
-                            cutting-edge technology experiences that require innovation.
+                        <p>I am an enthusiastic, responsible and hardworking junior software developer with an experience of 3 years in web and mobile development. Currently, I am pursuing a master of Science in software technology.
                         </p>
                         <div class="personal-info">
                             <p><span><i class="fa fa-user"></i></span>Bruno Cazabat</p>
@@ -235,8 +233,8 @@
                 <div class="col-md-5">
                     <div class="skills-left">
                         <h4>Some About my Abilities</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Being part of different projects helped me adapt to change quickly and made me a mature team worker, furthermore, I learned how to deal with strict deadlines and work well under pressure. Given my strong technical background, I
+                            intend to engage in cutting-edge technology experiences that require innovation.</p>
                         <a href="#portfolio" class="main-btn">My Portfolio</a>
                     </div>
                 </div>
@@ -255,25 +253,31 @@
                             <div class="progress-container">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <h4>Html5 &amp; Css3<span class="percent">95%</span></h4>
+                                    <h4>HTML5 &amp; CSS3<span class="percent">95%</span></h4>
                                 </div>
                             </div>
                             <div class="progress-container">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <h4>JavaScript<span class="percent">78%</span></h4>
+                                    <h4>C++ &amp; C<span class="percent">78%</span></h4>
                                 </div>
                             </div>
                             <div class="progress-container">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <h4>Php<span class="percent">89%</span></h4>
+                                    <h4>Flutter (Dart)<span class="percent">89%</span></h4>
                                 </div>
                             </div>
                             <div class="progress-container">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <h4>Wordpress<span class="percent">80%</span></h4>
+                                    <h4>Vue.js &amp; Angular<span class="percent">80%</span></h4>
+                                </div>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <h4>Git<span class="percent">95%</span></h4>
                                 </div>
                             </div>
                         </div>
@@ -293,14 +297,20 @@
                             </div>
                             <div class="progress-container">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <h4>Self-motivation<span class="percent">75%</span></h4>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <h4>Self-motivation<span class="percent">85%</span></h4>
                                 </div>
                             </div>
                             <div class="progress-container">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                                    <h4>Speed<span class="percent">70%</span></h4>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <h4>Speed<span class="percent">90%</span></h4>
+                                </div>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <h4>Flexible<span class="percent">95%</span></h4>
                                 </div>
                             </div>
                         </div>
