--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             </div>
                             <span>Web & Mobile Developer</span>
                             <h4>MedicFollow</h4>
-                            <p>Front-end Developer in a young french startup. Using Dart (Flutter), HTML, CSS, PHP, JS.
+                            <p>Front-end Developer in a young french startup. Using Flutter (Dart), HTML, CSS, PHP, JS.
                             </p>
                         </div>
                         <div class="resume-item">
