--- a/index.html
+++ b/index.html
@@ -331,48 +331,22 @@
             <div class="filter-menu">
                 <ul id="control" class="list-filter list-unstyled">
                     <li class="active" data-filter="all">All</li>
-                    <li data-filter="1">Web Design</li>
-                    <li data-filter="2">Graphic Design</li>
-                    <li data-filter="3">Branding</li>
+                    <li data-filter="1">Web Development</li>
+                    <li data-filter="2">Mobile Development</li>
+                    <li data-filter="3">Other</li>
                 </ul>
             </div>
             <div class="portfolio-content">
                 <div id="filtr-container" class="row">
-                    <div class="col-md-4 col-sm-6 filtr-item" data-category="1" data-sort="value">
-                        <div class="item">
-                            <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
-                            <div class="overlay">
-                                <a class="icon-img" href="https://via.placeholder.com/600x600"><i
-                                        class="fa fa-search-plus"></i></a>
-                                <h4 class="item-title">Project Title</h4>
-                                <div class="item-category">
-                                    <span>Web Design</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6 filtr-item" data-category="2" data-sort="value">
-                        <div class="item">
-                            <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
-                            <div class="overlay">
-                                <a class="icon-img" href="https://via.placeholder.com/600x600"><i
-                                        class="fa fa-search-plus"></i></a>
-                                <h4 class="item-title">Project Title</h4>
-                                <div class="item-category">
-                                    <span>Graphic Design</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-md-4 col-sm-6 filtr-item" data-category="3" data-sort="value">
                         <div class="item">
-                            <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
+                            <img class="img-responsive" src="images/portfolio/project1.png" style="width: 360px; height: 360px;" alt="">
                             <div class="overlay">
-                                <a class="icon-img" href="https://via.placeholder.com/600x600"><i
+                                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="files/internship_2020_Bruno-Cazabat.pdf"><i
                                         class="fa fa-search-plus"></i></a>
-                                <h4 class="item-title">Project Title</h4>
+                                <h4 class="item-title">AJHOME Intership</h4>
                                 <div class="item-category">
-                                    <span>Branding</span>
+                                    <span>Other</span>
                                 </div>
                             </div>
                         </div>
@@ -381,11 +355,24 @@
                         <div class="item">
                             <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
                             <div class="overlay">
-                                <a class="icon-img" href="https://via.placeholder.com/600x600"><i
+                                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="http://medicfollow.francecentral.cloudapp.azure.com/en/index.html"><i
                                         class="fa fa-search-plus"></i></a>
-                                <h4 class="item-title">Project Title</h4>
+                                <h4 class="item-title">MedicFollow</h4>
                                 <div class="item-category">
-                                    <span>Web Design</span>
+                                    <span>Web Development</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 filtr-item" data-category="1" data-sort="value">
+                        <div class="item">
+                            <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
+                            <div class="overlay">
+                                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="https://www.style-network-international.com"><i
+                                        class="fa fa-search-plus"></i></a>
+                                <h4 class="item-title">Style-Network-International</h4>
+                                <div class="item-category">
+                                    <span>Web Development</span>
                                 </div>
                             </div>
                         </div>
@@ -394,11 +381,11 @@
                         <div class="item">
                             <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
                             <div class="overlay">
-                                <a class="icon-img" href="https://via.placeholder.com/600x600"><i
+                                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="http://medicfollow.francecentral.cloudapp.azure.com/en/solutions.html"><i
                                         class="fa fa-search-plus"></i></a>
-                                <h4 class="item-title">Project Title</h4>
+                                <h4 class="item-title">MedicFollow Mobile App</h4>
                                 <div class="item-category">
-                                    <span>Graphic Design</span>
+                                    <span>Mobile Development</span>
                                 </div>
                             </div>
                         </div>
@@ -407,11 +394,24 @@
                         <div class="item">
                             <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
                             <div class="overlay">
-                                <a class="icon-img" href="https://via.placeholder.com/600x600"><i
+                                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="https://github.com/brunocazabat/PDF_extractor_toFTP"><i
                                         class="fa fa-search-plus"></i></a>
-                                <h4 class="item-title">Project Title</h4>
+                                <h4 class="item-title">AJHOME EDI</h4>
                                 <div class="item-category">
-                                    <span>Branding</span>
+                                    <span>Other</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 filtr-item" data-category="3" data-sort="value">
+                        <div class="item">
+                            <img class="img-responsive" src="https://via.placeholder.com/600x600" alt="">
+                            <div class="overlay">
+                                <a target="_blank" rel="noopener noreferrer" class="icon-img" href="https://github.com/brunocazabat/Reed_Pipe_Enthusiast"><i
+                                        class="fa fa-search-plus"></i></a>
+                                <h4 class="item-title">Reed Pipe Enthusiast</h4>
+                                <div class="item-category">
+                                    <span>Other</span>
                                 </div>
                             </div>
                         </div>
