--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <span>01.</span>
                         </div>
                         <h3>Hello ! I am Bruno Cazabat</h3>
-                        <p>I am an enthusiastic, responsible and hardworking junior software developer with an experience of 3 years in web and mobile development. Currently, I am pursuing a master of Science in software technology.
+                        <p>I am an enthusiastic, responsible and hardworking junior software developer with an experience of 3 years in web and mobile development. Currently, I am pursuing a master of Science in software technology at the HFT of Stuttgart.
                         </p>
                         <div class="personal-info">
                             <p><span><i class="fa fa-user"></i></span>Bruno Cazabat</p>
