--- a/index.html
+++ b/index.html
@@ -183,20 +183,20 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image3.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/image3.jpg" alt="" />
               <div class="overlay">
                 <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image3.JPG"><em class="fa fa-search-plus"></em></a>
+                  href="images/portfolio/image3.jpg"><em class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Avignon</h4>
               </div>
             </div>
           </div> <!-- END ROW 1 -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image4.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/image4.jpg" alt="" />
               <div class="overlay">
                 <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image4.JPG"><em
+                  href="images/portfolio/image4.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Vaison La Romaine</h4>
               </div>
@@ -224,10 +224,10 @@
           </div> <!-- END ROW  -->
           <div class="col-md-4 col-sm-6 filtr-item"> <!-- ROW  -->
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image7.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/image7.jpg" alt="" />
               <div class="overlay">
                 <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image7.JPG"><em
+                  href="images/portfolio/image7.jpg"><em
                     class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
@@ -400,10 +400,10 @@
           </div>
           <div class="col-md-4 col-sm-6 filtr-item">
             <div class="item">
-              <img class="img-responsive height-300" src="images/portfolio/image24.JPG" alt="" />
+              <img class="img-responsive height-300" src="images/portfolio/image24.jpg" alt="" />
               <div class="overlay">
                 <a target="_blank" rel="noopener noreferrer" class="icon-img"
-                  href="images/portfolio/image24.JPG"><em class="fa fa-search-plus"></em></a>
+                  href="images/portfolio/image24.jpg"><em class="fa fa-search-plus"></em></a>
                 <h4 class="item-title">Stuttgart</h4>
               </div>
             </div>
